lintian (2.5.67) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * data/standards-version/release-dates:
    + [CL] Correct date(1) invocation example in comment.
    + [CL] Add 4.1.3 as a known standards version.

  * debian/control:
    + [CL] Declare compliance with Debian Policy 4.1.3.
    + [CL] Mention Debian Policy 4.1.3 in long package description.

 -- Chris Lamb <lamby@debian.org>  Tue, 26 Dec 2017 15:34:26 +0000

lintian (2.5.66) unstable; urgency=medium

  Merry Christmas!

  * Summary of tag changes:
    + Added:
      - autotools-pkg-config-macro-not-cross-compilation-safe
      - bugs-field-does-not-refer-to-debian-infrastructure
      - mismatched-python-substvar
      - missing-notice-file-for-apache-license
      - override_dh_clean-does-not-call-dh_clean
      - package-contains-python-doctree-file
      - pkg-config-unavailable-for-cross-compilation
      - portable-executable-missing-security-features
      - python-package-depends-on-package-from-other-python-variant
      - vcs-fields-use-more-than-one-vcs

  * checks/*.desc:
    + [CL] Standardise on capital-L "Lintian" in package descriptions.
      Thanks to Adam D. Barratt for the suggestion.
  * checks/cruft.{pm,desc}:
    + [CL] Check for packages that invoke AC_PATH_PROG without considering
      cross-compilation. Thanks to Helmut Grohne for the idea and
      proof-of-concept implementation.  (Closes: #884798)
  * checks/fields.{pm,desc}:
    + [CL] Emit a wishlist warning for packages that mix-and-match more
      than one version control system in Vcs-* headers.  (Closes: #884503)
    + [CL] Warn when packages specify a "Bugs" field in debian/control that
      does not refer to official Debian infrastructure as this can make
      reportbug unable to report bugs.  (Closes: #741071)
  * checks/files.{pm,desc}:
    + [CL] Warn maintainers about packages that ship pkg-config files under
      /usr/lib/pkgconfig as they are unavailable under cross-compilation.