@@ -1,0 +1,23 @@
+# Format is /\bREGEX\b/i => correction
+
+# Days
+Monday          => Mon
+Tues(day)?      => Tue
+Wednesday       => Wed
+Thurs(day)?     => Thu
+Friday          => Fri
+Saturday        => Sat
+Sunday          => Sun
+
+# Months
+January         => Jan
+February        => Feb
+March           => Mar
+April           => Apr
+June            => June
+July            => July
+August          => Aug
+Sept(ember)?    => Sep
+October         => Oct
+November        => Nov
+December        => Dec
