@@ -1,0 +1,8 @@
+{$source} ({$version}) unstable; urgency=low
+
+  * Lintian Test Suite.
+  * Test: {$testname}
+  * Suppress "should close ITP bug" messages.  (Closes: #123456)
+  * Writes out "Sept" and "Thurs"; should be "Sep" and "Thu".
+
+ -- {$author}  Thurs, 14 Sept 2017 10:47:43 +0000
